# scaling-spork

./: app.py  bootstrap.py  docker-compose.yaml  pyproject.toml
sql/: create_table_employees.sql  create_table_incoming_request.sql  create_table_protocol.sql  create_table_students.sql  create_table_vote_employees.sql  create_table_vote_students.sql  create_table_votes.sql
sql/functions/: create_function_add_employee.sql  create_function_add_incoming_request.sql  create_function_add_protocol.sql  create_function_add_student.sql  create_function_add_vote.sql  create_function_add_vote_employees.sql  create_function_check_user_for_auth.sql  create_function_create_incoming_request.sql  create_function_create_student.sql  create_function_vote_students.sql
sql/procedures/: create_procedure_add_employee.sql  create_procedure_add_incoming_request.sql  create_procedure_add_protocol.sql  create_procedure_add_student.sql  create_procedure_add_vote.sql  create_procedure_add_vote_employees.sql  create_procedure_add_vote_students.sql  create_procedure_create_vote_by_employee.sql
src/: dependencies.py
src/database/: engine.py
src/models/: __init__.py  employee_model.py  incoming_request_model.py  protocol_model.py  student_model.py  vote_employees_model.py  vote_model.py  vote_students_model.py
src/repository/: __init__.py  abstract_repository.py  sqlalchemy_repository.py
src/routers/: __init__.py  abstract_router.py  base_router.py  employee_router.py  incoming_request_router.py  students_router.py
src/services/: __init__.py  abstract_service.py  base_service.py  (+7 more)
(+8 files in other folders)
